<resources>
    <string name="app_name">TransFile</string>

    <string name="navigation_drawer_open">Deschide dulapul de activitați</string>
    <string name="navigation_drawer_close">Inchide dulapul de activitați</string>
    <string name="app_version">TransFile 1.0</string>
    <string name="name">Student: Mihai-Alexandru Muntean</string>
    <string name="settings">Setări</string>
    <string name="home">Acasă</string>
    <string name="file_up">Trimite fișier</string>
    <string name="file_down">Recepționează fișier</string>

    <!-- Settings Fragment -->
    <string name="sett_frag_title">Setări</string>
    <string name="error">"Introduceți corect parametrii transmisiei!!!"</string>
    <string name="hint_ip">"Adresa IPv4 a dispozitivului server."</string>
    <string name="hint_port">"Portul de comunicare cu serverul."</string>
    <string name="port_server_hint">Portul de comunicare cu clientul.</string>
    <string name="ftps">File Transfer Protocol Secured</string>
    <string name="ftp">File Transfer Protocol</string>
    <string name="des">Data Encryption Standard</string>
    <string name="aes">Advanced Encryption Standard</string>
    <string name="bf">Blowfish Algorithm</string>

    <string name="alg_tag">Algoritmul de criptare</string>
    <string name="protocol_tag">Protocolul de transfer</string>

    <string name="cl_tag">Setări pentru primirea fișierului</string>
    <string name="sv_tag">Setări pentru trimiterea fișierului</string>

    <string name="port_server">Portul corespunzator server-ului</string>
    <string name="nr_port_sv">20000</string>
    <string name="nr_port_cl">5001</string>
    <string name="ip">192.168.0.108</string>
    <string name="err">Nu sunt erori!</string>

    <!-- Filedescr fragment -->

    <string name="select_file">Selectează fișier</string>
    <string name="open_file">Vizualizați fișierul!</string>
    <string name="choose_another_file">Alege alt fișier</string>
    <string name="go_back">Înapoi</string>
    <string name="path_file">Ați selectat următorul fișier:</string>
    <string name="selected_path_file">Nu ați selectat nici un fișier.</string>

    <!-- Server fragment // Fileup-->

    <string name="start_server">Trimiteți fișierul</string>
    <string name="pick_file">Alegeți fișierul dorit pentru transfer</string>

    <!-- FileUp  fragment-->

    <string name="server_info">Calea fișierului ales este:</string>
    <string name="sel">Afișați calea selectată</string>
    <!-- Client fragment // File Down-->

    <string name="start_client">Permiteți primirea fișierului!</string>
    <string name="open_file_2">Vizualizați fișierul primit!</string>
    <string name="info_path">Fișierul este salvat la locația:</string>
    <string name="path">Fișierul încă nu a fost primit</string>

    <!-- Home fragment-->

    <string name="title">Bun venit!</string>
    <string name="paragraph1">Instrucțiuni pentru utilizarea aplicației.</string>

    <string name="paragraph2">Operații pentru trimiterea fișierului.</string>

    <string name="paragraph3" formatted="true">
        Întâi, se deschide meniul din stânga și se alege „Setări”. Aici, se selectează un protocol
        de transfer, un algoritm de codare și se introduce numărul portului digital (obligatoriu mai
        mare de 2000, dar mai mic de 65000, același ca cel introdus la secțiunea de recepționare a
        fișierului de la aplicația distantă TransFile). Se completează cu o adresă validă IPv4
        și cu un numar de port digital, la secțiunea de primire a fișierului.
        Se apasă butonul rotund din drapta jos, această acțiune având ca rezultat afișarea unui mesaj
        care va conține „Setări salvate!” sau „Există o eroare!”. În continuare, se redeschide
        meniul din dreapta și se selectează
        „Trimite fișierul”. Pe ecran sunt două butoane. Se apasă butonul de selecție a unui fișier
        (cel de sus), și se selectează fișierul dorit. După selecție aplicația va afișa un ecran cu
        patru butoane. Este imperios să se apese butonul cel mai de sus, pentru a confirma selecția
        fișierului. Există posibilitatea selecției altui fișier, a deschiderii fișierului selectat
        în aplicație externă și posibilitatea revenirii la ecranul inițial. După acești pași, se
        apasă butonul „Trimiteți fișierul”. În continuare, se vor urma instrucțiunile pentru
        primirea fișierului din aplicația TransFile distantă.
    </string>

    <string name="paragraph4">Operații pentru primirea fișierului.</string>

    <string name="paragraph5">
         Întâi, se deschide meniul din stânga și se alege „Setări”. Aici, la secțiunea pentru
        primirea fișierului, în prima casetă de introducere a textului se completează adresa Ipv4
        validă a dispozitivului distant, iar la următorarea casetă de introducere a textului se
        introduce un număr pentru portul digital dorit (același ca cel introdus la secțiunea de
        trimitere a
        fișierului de la aplicația distantă TransFile, obligatoriu mai mare de 2000, dar mai mic de
        65000). Se selectează de la secțiunea „Setări pentru trimiterea fișierului”, un protocol de
        transfer, un algoritm de codare si se introduce un număr de port digital
        obligatoriu mai mare de 2000, dar mai mic de 65000).
        Mai apoi, se apasă butonul rotund din dreapta jos, această acțiune având ca rezultat
        afișarea unui mesaj care va conține „Setări salvate!” sau „Există o eroare!”.
    </string>

    <string name="paragraph6">Atenție, este obligatorie urmarea instrucțiunilor pentru trimiterea
        mai întâi a fișierului, iar apoi cele pentru primirea fișierului!
    </string>

    <!-- Settings Class-->
    <string name="save_sett">Setări salvate!</string>
    <!-- FileUp Class-->
    <string name="file_rec">Fișierul a fost primit!</string>

</resources>
