<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNavHeader"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ipv4"
        android:layout_width="314dp"
        android:layout_height="40dp"
        android:hint="@string/hint_ip"
        android:text="192.168.0.106"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/port"
        android:layout_width="298dp"
        android:layout_height="63dp"
        android:layout_below="@+id/ipv4"
        android:hint="@string/hint_port"
        android:text="20000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipv4"
        app:layout_constraintVertical_bias="0.034" />

    <RadioGroup
        android:id="@+id/protocol"
        android:layout_width="359dp"
        android:layout_height="67dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info3"
        app:layout_constraintVertical_bias="0.050000012">

        <RadioButton
            android:id="@+id/ftp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ftp" />

        <RadioButton
            android:id="@+id/ftps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ftps" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/algorithm"
        android:layout_width="362dp"
        android:layout_height="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info4"
        app:layout_constraintVertical_bias="0.13">

        <RadioButton
            android:id="@+id/aes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aes" />

        <RadioButton
            android:id="@+id/bf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bf" />

        <RadioButton
            android:id="@+id/des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/des" />
    </RadioGroup>

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sett_frag_title"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sv_tag"
        app:layout_constraintBottom_toTopOf="@+id/ipv4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
        app:layout_constraintVertical_bias="0.495" />

    <TextView
        android:id="@+id/info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cl_tag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/port"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/info3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protocol_tag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/port"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/info4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alg_tag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/port"
        app:layout_constraintVertical_bias="0.43" />

    <TextView
        android:id="@+id/err"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/info2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/port" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatActBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/colorBlueSaintAlbert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936"
        app:srcCompat="@android:drawable/ic_menu_save" />


</android.support.constraint.ConstraintLayout>